--- a/themes/amirraminfar/layouts/index.html
+++ b/themes/amirraminfar/layouts/index.html
@@ -6,12 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{ .Site.Title }}</title>
   <script src="/js/app.bundle.js"></script>
+  <link rel="stylesheet" href="/css/styles.css">
   {{ .Hugo.Generator }}
 </head>
 <body>
-  {{- range .Data.Pages }}
-    <a href="">{{ .Title }}</a>
-  {{- end }}
   {{- range .Data.Pages }}
     {{ .Render "section" }}
   {{- end }}
