--- a/themes/amirraminfar/static/css/header.css
+++ b/themes/amirraminfar/static/css/header.css
@@ -10,12 +10,15 @@ header {
     right: 0;
     border-bottom: solid 1px rgba(160,160,160,.3);
     lost-align: horizontal flex;
-    font-size: 0.7em;
+
     font-weight: 400;
 
-    & h1 {
+    & > * {
+        font-size: 0.7em;
+    }
+
+    & h2 {
         lost-column: 2/12;
-        font-size: inherit;
         margin: 0;
         font-weight: 800;
         padding-left: 1.5em;
