Adds menu and lines

--- a/themes/amirraminfar/layouts/index.html
+++ b/themes/amirraminfar/layouts/index.html
@@ -15,7 +15,14 @@
     <a href="/">Amir Raminfar</a>
   </h2>
   <nav>
-    <a href="test">test</a>
+    <ul>
+        <li>
+            <a href="test">About me</a>
+        </li>
+        <li>
+            <a href="test">Projects</a>
+        </li>
+    </ul>
   </nav>
 </header>
 {{- range .Data.Pages }}
