--- a/themes/amirraminfar/static/css/app.css
+++ b/themes/amirraminfar/static/css/app.css
@@ -1,5 +1,5 @@
 @import "~normalize.css";
-@import "./header.css"
+@import "./header.css";
 
 @lost flexbox flex;
 
@@ -7,18 +7,16 @@ body {
     font-family: "Roboto";
     background: #f4f4f4;
     color: color(black lightness(20%));
-    padding-top: 3.5em;
+    margin-top: 3.5em;
     font-size: 100%;
 }
-
-
 
 h1 {
     font-weight: 300;
 }
 
-section {
+.article--front-page {
     lost-center: 980px;
     min-height: 100vh;
-    align-content: flex-start;
+    flex-direction: column;
 }
