--- a/themes/amirraminfar/static/css/header.css
+++ b/themes/amirraminfar/static/css/header.css
@@ -1,5 +1,9 @@
+:root {
+    --border-style: solid 1px rgba(160, 160, 160, .3);
+}
+
 header {
-    letter-spacing: .25em;
+    letter-spacing: .15em;
     font-family: "Raleway";
     background: white;
     height: 3.5em;
@@ -8,9 +12,8 @@ header {
     top: 0;
     left: 0;
     right: 0;
-    border-bottom: solid 1px rgba(160,160,160,.3);
+    border-bottom: var(--border-style);
     lost-align: horizontal flex;
-
     font-weight: 400;
 
     & > * {
@@ -18,18 +21,34 @@ header {
     }
 
     & h2 {
-        lost-column: 2/12;
         margin: 0;
         font-weight: 800;
         padding-left: 1.5em;
-
-        & a {
-            font-weight: inherit;
-        }
     }
 
     & nav {
-        lost-column: 10/12;
+        margin-left: 1.5em;
+        padding-left: 1.5em;
+        border-left: var(--border-style);
+
+        & > ul {
+            margin: 0;
+            padding: 0;
+
+            & > li {
+                margin: 0 0 0 1em;
+                padding: 0 0 0 1em;
+                border-left: var(--border-style);
+                display: inline-block;
+                line-height: 1;
+
+                &:first-child {
+                    border-left: none;
+                    margin-left: 0;
+                    padding-left: 0;
+                }
+            }
+        }
     }
 
     & a {
