--- a/themes/amirraminfar/static/css/header.css
+++ b/themes/amirraminfar/static/css/header.css
@@ -2,7 +2,7 @@
     --border-style: solid 1px rgba(160, 160, 160, .3);
 }
 
-header {
+#header {
     letter-spacing: .15em;
     font-family: "Raleway";
     background: white;
@@ -26,7 +26,7 @@ header {
         padding-left: 1.5em;
     }
 
-    & nav {
+    & #main-nav {
         margin-left: 1.5em;
         padding-left: 1.5em;
         border-left: var(--border-style);
