Adds more styles

--- a/themes/amirraminfar/layouts/index.html
+++ b/themes/amirraminfar/layouts/index.html
@@ -26,8 +26,20 @@
   </nav>
 </header>
 <div id="wrapper">
-    <section id="side-bar">
-        this is sidebar
+    <section id="sidebar">
+        <section id="intro">
+            <a href="/" class="logo">
+                <img src="/img/me.jpg" alt="Picture of Amir" />
+            </a>
+            <header>
+                <h2>Amir Raminfar</h2>
+                <ul>
+                    <li>Software engineer.</li>
+                    <li>Designer.</li>
+                    <li>Entrepreneur.</li>
+                </ul>
+            </header>
+        </section>
     </section>
     <main id="main">
         {{- range .Data.Pages }}
