--- a/themes/amirraminfar/static/css/font-page.css
+++ b/themes/amirraminfar/static/css/font-page.css
@@ -4,10 +4,11 @@
 
 #wrapper {
     padding: 4em;
-    lost-flex-container: row;
+
+    lost-center: 90em flex;
 }
 
-#side-bar {
+#sidebar {
     lost-column: 1/3 flex;
 }
 
@@ -27,6 +28,52 @@
         padding-bottom: .7em;
         font-weight: 900;
         font-size: 1.5em;
+    }
+}
+
+#intro {
+    & .logo {
+        border-bottom: 0;
+        display: inline-block;
+        margin: 0 0 1em;
+        overflow: hidden;
+        position: relative;
+        width: 5em;
+
+        &:before {
+            background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100px' height='100px' viewBox='0 0 100 100' preserveAspectRatio='none' zoomAndPan='disable'%3E%3Cpolygon points='0,0 100,0 100,25 50,0 0,25' style='fill:%23f4f4f4' /%3E%3Cpolygon points='0,100 100,100 100,75 50,100 0,75' style='fill:%23f4f4f4' /%3E%3C/svg%3E") no-repeat top left;
+            background-size: 100% 100%;
+            content: '';
+            display: block;
+            height: 100%;
+            left: 0;
+            position: absolute;
+            top: 0;
+            width: 100%;
+        }
+
+        & img {
+            display: block;
+            margin-left: -.25em;
+            width: 5.5em;
+        }
+    }
+
+    & h2 {
+        font-size: 2em;
+        font-weight: 900;
+    }
+    & ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        line-height: 2.5;
+        font-weight: 400;
+        font-family: "Raleway";
+        letter-spacing: .25em;
+        text-transform: uppercase;
+        opacity: 0.7;
+        font-size: 0.7em;
     }
 }
 
