--- a/themes/amirraminfar/layouts/index.html
+++ b/themes/amirraminfar/layouts/index.html
@@ -40,6 +40,13 @@
                 </ul>
             </header>
         </section>
+        <footer id="footer">
+            <p class="copyright">
+                © Hugo Future Imperfect. Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.
+                Ported by <a href="//github.com/jpescador" target="_blank">Julio Pescador</a>. Powered by
+                <a href="//gohugo.io" target="_blank">Hugo</a>
+            </p>
+        </footer>
     </section>
     <main id="main">
         {{- range .Data.Pages }}
