--- a/themes/amirraminfar/static/css/app.css
+++ b/themes/amirraminfar/static/css/app.css
@@ -28,3 +28,18 @@ p {
     margin: 0 0 1em;
     opacity: 0.88;
 }
+
+:any-link {
+    border-bottom: dotted 1px rgba(160, 160, 160, .65);
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+        border-bottom-color: transparent;
+        color: #2ebaae;
+    }
+
+    @nest p & {
+        border-bottom-width: 2px;
+    }
+}
