--- a/themes/amirraminfar/static/css/font-page.css
+++ b/themes/amirraminfar/static/css/font-page.css
@@ -7,19 +7,13 @@
     lost-center: 90em;
 }
 
-#sidebar {
-    width: calc(99.9% * 1 / 3 - 10px);
-    float: left;
-}
-
 #main {
     width: calc(99.9% * 2 / 3 - 10px);
-
     float: right;
 }
 
 #intro {
-    width: calc(99.9% * 1 / 3 - 10px);
+    width: calc(99.9% * 1 / 3 - 20px);
     float: left;
 
     & .logo {
@@ -68,7 +62,8 @@
 }
 
 #footer {
-    lost-column: 1/3;
+    width: calc(99.9% * 1 / 3 - 20px);
+    float: left;
     font-family: Raleway, Helvetica, sans-serif;
     font-weight: 400;
     letter-spacing: .25em;
@@ -89,5 +84,36 @@
         padding-bottom: .7em;
         font-weight: 900;
         font-size: 1.5em;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    #wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #intro {
+        order: 1;
+        text-align: center;
+        margin-bottom: 1em;
+
+        & li {
+            display: inline-block;
+        }
+    }
+
+    #main {
+        order: 2;
+    }
+
+    #footer {
+        order: 3;
+        text-align: center;
+    }
+
+    #main, #footer, #intro {
+        float: none;
+        width: auto;
     }
 }
