--- a/themes/amirraminfar/static/css/font-page.css
+++ b/themes/amirraminfar/static/css/font-page.css
@@ -57,7 +57,7 @@
         letter-spacing: .25em;
         text-transform: uppercase;
         opacity: 0.7;
-        font-size: 0.7em;
+        font-size: 0.8em;
     }
 }
 
@@ -70,6 +70,8 @@
     text-transform: uppercase;
     font-size: 0.5em;
     color: #aaa;
+    line-height: 1.8em;
+    margin-top: 2em;
 }
 
 .article--front-page {
@@ -87,7 +89,7 @@
     }
 }
 
-@media screen and (max-width: 1280px) {
+@media screen and (width <= 1280px) {
     #wrapper {
         display: flex;
         flex-direction: column;
@@ -115,5 +117,20 @@
     #main, #footer, #intro {
         float: none;
         width: auto;
+    }
+}
+
+@media screen and (width <= 1024px) {
+    #wrapper {
+        padding: 3em 0 0;
+    }
+}
+
+
+@media screen and (width <= 780px) {
+    #intro{
+        & h2{
+            font-size: 1.5em;
+        }
     }
 }
