Creates a layout file instead

--- a/themes/amirraminfar/static/css/app.css
+++ b/themes/amirraminfar/static/css/app.css
@@ -1,5 +1,6 @@
 @import "~normalize.css";
 @import "~highlight.js/styles/monokai-sublime.css";
+@import "layout.css";
 @import "header.css";
 @import "font-page.css";
 
