--- a/themes/amirraminfar/static/css/font-page.css
+++ b/themes/amirraminfar/static/css/font-page.css
@@ -2,20 +2,7 @@
     --border-style: solid 1px rgba(160, 160, 160, .3);
 }
 
-#wrapper {
-    padding: 4em;
-    lost-center: 90em;
-}
-
-#main {
-    width: calc(99.9% * 2 / 3 - 10px);
-    float: right;
-}
-
 #intro {
-    width: calc(99.9% * 1 / 3 - 20px);
-    float: left;
-
     & .logo {
         border-bottom: 0;
         display: inline-block;
@@ -47,6 +34,7 @@
         font-size: 2em;
         font-weight: 900;
     }
+
     & ul {
         margin: 0;
         padding: 0;
@@ -59,19 +47,6 @@
         opacity: 0.7;
         font-size: 0.8em;
     }
-}
-
-#footer {
-    width: calc(99.9% * 1 / 3 - 20px);
-    float: left;
-    font-family: Raleway, Helvetica, sans-serif;
-    font-weight: 400;
-    letter-spacing: .25em;
-    text-transform: uppercase;
-    font-size: 0.5em;
-    color: #aaa;
-    line-height: 1.8em;
-    margin-top: 2em;
 }
 
 .article--front-page {
@@ -89,48 +64,15 @@
     }
 }
 
-@media screen and (width <= 1280px) {
-    #wrapper {
-        display: flex;
-        flex-direction: column;
-    }
-
-    #intro {
-        order: 1;
-        text-align: center;
-        margin-bottom: 1em;
-
-        & li {
-            display: inline-block;
-        }
-    }
-
-    #main {
-        order: 2;
-    }
-
-    #footer {
-        order: 3;
-        text-align: center;
-    }
-
-    #main, #footer, #intro {
-        float: none;
-        width: auto;
-    }
-}
-
-@media screen and (width <= 1024px) {
-    #wrapper {
-        padding: 3em 0 0;
-    }
-}
-
-
 @media screen and (width <= 780px) {
-    #intro{
-        & h2{
+    #intro {
+        & h2 {
             font-size: 1.5em;
         }
+    }
+
+    .article--front-page {
+        padding-left: 1em;
+        padding-right: 1em;
     }
 }
