--- a/themes/amirraminfar/layouts/index.html
+++ b/themes/amirraminfar/layouts/index.html
@@ -31,7 +31,7 @@
             <img src="/img/me.jpg" alt="Picture of Amir"/>
         </a>
         <header>
-            <h2>Amir Raminfar</h2>
+            <h2 id="typed">Amir Raminfar</h2>
             <ul>
                 <li>Software engineer.</li>
                 <li>Designer.</li>
@@ -54,7 +54,6 @@
 
 
 </div>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/highlight.min.js"></script>
 <script src="/js/app.bundle.js"></script>
 </body>
 </html>
