--- a/themes/amirraminfar/static/css/font-page.css
+++ b/themes/amirraminfar/static/css/font-page.css
@@ -96,3 +96,23 @@
         }
     }
 }
+
+
+
+#typed:after {
+    opacity: 1;
+    animation: blink 1s infinite;
+    font-weight: normal;
+    content: '|';
+}
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
