Changes color for cursor

--- a/themes/amirraminfar/static/css/font-page.css
+++ b/themes/amirraminfar/static/css/font-page.css
@@ -104,6 +104,7 @@
     animation: blink 1s infinite;
     font-weight: normal;
     content: '|';
+    color: color(#2ebaae);
 }
 @keyframes blink {
     0% {
