--- a/themes/amirraminfar/layouts/index.html
+++ b/themes/amirraminfar/layouts/index.html
@@ -47,21 +47,23 @@
     <section id="icons" class="sidebar">
         <ul>
             <li>
-                <a href=""><i class="fa fa-github" aria-hidden="true"></i></a>
+                <a href="https://github.com/amir20" title="Github/amir20" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
             </li>
             <li>
-                <a href=""><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+                <a href="https://stackoverflow.com/users/419075/amir-raminfar" title="StackOverflow/amir-raminfar" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
             </li>
             <li>
-                <a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/amirraminfar" title="@amirraminfar" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/amirraminfar" title="LinkedIn/amirraminfar" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </li>
         </ul>
     </section>
     <footer class="sidebar">
         <p id="footer" class="copyright">
-            © Hugo Future Imperfect. Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>.
-            Ported by <a href="//github.com/jpescador" target="_blank">Julio Pescador</a>. Powered by
-            <a href="//gohugo.io" target="_blank">Hugo</a>
+            © 2016. Design inspired by <a href="https://html5up.net/future-imperfect" target="_blank">Future Imperfect</a>.
+            Site powered by <a href="//gohugo.io" target="_blank">Hugo</a>.
         </p>
     </footer>
 
