Adds phantom page

--- a/themes/amirraminfar/layouts/phantomjs-node/single.html
+++ b/themes/amirraminfar/layouts/phantomjs-node/single.html
@@ -12,5 +12,7 @@
     {{ partial "footer" . }}
 </div>
 <script src="/js/app.bundle.js"></script>
+<script src="//cdn.jsdelivr.net/highlight.js/9.8.0/highlight.min.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
