--- a/themes/amirraminfar/layouts/partials/header.html
+++ b/themes/amirraminfar/layouts/partials/header.html
@@ -5,10 +5,10 @@
     <nav id="main-nav">
         <ul>
             <li>
-                <a href="test">About me</a>
+                <a href="/about-me/">About me</a>
             </li>
             <li>
-                <a href="test">Projects</a>
+                <a href="/phantomjs-node/">PhantomJS Node</a>
             </li>
         </ul>
     </nav>
