--- a/themes/amirraminfar/layouts/_default/single.html
+++ b/themes/amirraminfar/layouts/_default/single.html
@@ -1,3 +1,19 @@
-<article>
-    {{ .Content }}
-</article>
+<!DOCTYPE html>
+<html lang="en">
+{{ partial "head" . }}
+<body>
+{{ partial "header" . }}
+<div id="wrapper">
+    {{ partial "about-sidebar" . }}
+    <main id="main">
+        <article class="article">
+            {{ .Content }}
+        </article>
+    </main>
+    {{ partial "links-sidebar" . }}
+    {{ partial "footer" . }}
+
+</div>
+<script src="/js/app.bundle.js"></script>
+</body>
+</html>
