--- a/themes/amirraminfar/static/css/phantom.css
+++ b/themes/amirraminfar/static/css/phantom.css
@@ -9,11 +9,11 @@ body.phantom {
         background: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100px' height='100px' viewBox='0 0 100 100' preserveAspectRatio='none' zoomAndPan='disable'%3E%3Cpolygon points='0,0 100,0 100,25 50,0 0,25' style='fill:%233b3e43' /%3E%3Cpolygon points='0,100 100,100 100,75 50,100 0,75' style='fill:%233b3e43' /%3E%3C/svg%3E") no-repeat top left;
     }
 
-    & #wrapper, & h1{
+    & #wrapper, & h1 {
         color: #f4f4f4;
     }
 
-    & h2{
+    & h2 {
         margin-top: 2.3em;
     }
 
@@ -31,7 +31,7 @@ body.phantom {
         padding: 5em 3em 3em;
     }
 
-    & .button{
+    & .button {
         color: #f0f0f0;
         box-shadow: inset 0 0 0 1px #f0f0f0;
 
@@ -44,7 +44,20 @@ body.phantom {
 
 }
 
-#github{
+@media screen and (width <= 1280px) {
+    body.phantom {
+        & #wrapper {
+            padding: 3em 0 0;
+        }
+        & #main {
+            top: 0;
+            padding: 3em;
+        }
+    }
+
+}
+
+#github {
     margin-left: 3em;
     vertical-align: middle;
 }
