--- a/style.scss
+++ b/style.scss
@@ -38,8 +38,8 @@ h1.title.is-1 {
 
 #vis {
   z-index: 1;
-  opacity: 0.5;
-  position: absolute;
+  opacity: 0.8;
+  position: fixed;
   bottom: -10px;
 }
 
@@ -47,8 +47,6 @@ h1.title.is-1 {
   position: relative;
   z-index: 2;
 }
-
-
 
 .wave:nth-of-type(1) {
   fill: #a55eea;
@@ -72,11 +70,11 @@ h1.title.is-1 {
   @import "~bulma-prefers-dark/sass/elements/title.sass";
   @import "~bulma-prefers-dark/sass/elements/button.sass";
 
-  .wave {
-    fill: #2bcbba;
+  #vis {
+    opacity: 0.88;
   }
 
-  #vis {
-    opacity: 0.45;
+  .wave:nth-of-type(4) {
+    fill: #0b5f5b;
   }
 }
