--- a/style.scss
+++ b/style.scss
@@ -58,6 +58,13 @@ body {
 
 .button.is-success {
   color: #fff;
+  &:hover {
+    color: #fff;
+  }
+}
+
+a:not(.button) {
+  text-decoration: underline;
 }
 
 @include prefers-scheme(dark) {
@@ -68,6 +75,9 @@ body {
 
   .button.is-success {
     color: #fff;
+    &:hover {
+      color: #fff;
+    }
   }
 
   #vis {
