--- a/style.scss
+++ b/style.scss
@@ -9,15 +9,15 @@ $success: #26de81;
 $link: #4b7bec;
 $body-background-color: $beige-lighter;
 
-@import "~bulma/sass/utilities/_all.sass";
-@import "~bulma/sass/base/_all.sass";
-@import "~bulma/sass/layout/hero.sass";
-@import "~bulma/sass/grid/columns.sass";
-@import "~bulma/sass/elements/title.sass";
-@import "~bulma/sass/elements/button.sass";
-@import "~bulma/sass/utilities/mixins.sass";
+@import "bulma/sass/utilities/_all.sass";
+@import "bulma/sass/base/_all.sass";
+@import "bulma/sass/layout/hero.sass";
+@import "bulma/sass/grid/columns.sass";
+@import "bulma/sass/elements/title.sass";
+@import "bulma/sass/elements/button.sass";
+@import "bulma/sass/utilities/mixins.sass";
 
-@import "~bulma-prefers-dark/sass/utilities/_all";
+@import "bulma-prefers-dark/sass/utilities/_all";
 
 body {
   font-family: "Roboto", sans-serif;
@@ -65,13 +65,14 @@ body {
 
 a:not(.button) {
   text-decoration: underline;
+  color: $link;
 }
 
 @include prefers-scheme(dark) {
-  @import "~bulma-prefers-dark/sass/base/_all.sass";
-  @import "~bulma-prefers-dark/sass/layout/hero.sass";
-  @import "~bulma-prefers-dark/sass/elements/title.sass";
-  @import "~bulma-prefers-dark/sass/elements/button.sass";
+  @import "bulma-prefers-dark/sass/base/_all.sass";
+  @import "bulma-prefers-dark/sass/layout/hero.sass";
+  @import "bulma-prefers-dark/sass/elements/title.sass";
+  @import "bulma-prefers-dark/sass/elements/button.sass";
 
   .button.is-success {
     color: #fff;
