--- a/src/custom.css
+++ b/src/custom.css
@@ -6,3 +6,7 @@ a {
   @apply text-blue-600 dark:text-blue-300;
   text-decoration: underline;
 }
+
+h1 {
+  font-family: "Playfair Display", serif;
+}
